exercises/Knowledge/3.5.1/README.md
# JQR Exercises: 3.5.1

```
title: Describe terms and concepts
condition: B
standard: A
sub_items:
    3.5.1.a: processes
    3.5.1.b: cpu scheduling
    3.5.1.c: paging tables
    3.5.1.d: caching
    3.5.1.e: kernel and user-mode memory
```

## Instructions

### Complete the exercise

To complete these exercises, upload a JQR item (3.x.x.x.jqr) to the web quiz here: https://17d.cybbh.io/bolc/public/web-quiz/

When you complete an item, download and save the `*.response.yaml` file in this same folder. Then commit the change to GitLab.

### Commit the exercise

```
git add *response.yaml
git commit
git push
```

## CI Pipeline

Note: if your CI pipeline does not run when you commit, please ensure you have made a merge request to merge
your branch into the primary branch. This will trigger the rules for the CI Job configured for this item.


# References

[Difference between dispatcher and scheduler](https://afteracademy.com/blog/difference-between-scheduler-and-dispatcher)
