exercises/Knowledge/3.6.1/README.md
# JQR 3.6.1


This exercise validates JQR item 3.6.1

title: 'Describe the concepts and terms associated with the following networking fundamentals:
condition: B
standard: A
sub_items:
  3.6.1.a: Common string-handling functions
  3.6.1.b: which functions guarantee null-terminated strings
  3.6.1.c: an off-by-one error
  3.6.1.d: an integer overflow
  3.6.1.e: a buffer overflow
  3.6.1.f: the concept of use-after-free
  3.6.1.g: resource acquisition is initialization (RAII)
  3.6.1.h: The difference between a regular expression and a context-free grammar
  3.6.1.i: The difference between input validation vs. input sanitization
  3.6.1.j: The meaning of a pure function and if a function has a side-effect
  3.6.1.k: general low-level crypto basics


## Instructions

### Complete the exercise

To complete these exercises, upload a JQR item (3.x.x.x.jqr) to the web quiz here: https://17d.cybbh.io/bolc/public/web-quiz/

When you complete an item, download and save the `*.response.yaml` file in this same folder. Then commit the change to GitLab.

### Commit the exercise

```
git add *response.yaml
git commit
git push
```

## CI Pipeline

Note: if your CI pipeline does not run when you commit, please ensure you have made a merge request to merge
your branch into the primary branch. This will trigger the rules for the CI Job configured for this item.

